Working on Assignment 3

--- a/Reverse String.ipynb
+++ b/Reverse String.ipynb
@@ -29,6 +29,16 @@
    "id": "243272dd",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "conda update jupyter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "086fef17",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
