--- a/chapter7_w7.ipynb
+++ b/chapter7_w7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7fe80c2a",
    "metadata": {},
    "outputs": [],
@@ -301,17 +301,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "0a699c65",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 96, 100,  94, 100])"
+       "array([100,  96,  90])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
