--- a/ f200317_7C_A3.ipynb
+++ b/ f200317_7C_A3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "cf1c1c89",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "2a30ace2",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "3ba0203b",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,8 @@
    "source": [
     "#Q-2\n",
     "\n",
-    "list_of_list = [list(range(10, -1, -2)), list(range(0,11))]\n",
+    "list_of_list = [[x for x in range(10, -1, -2)], [x for x in range(0,11)]]\n",
+    "\n",
     "list_array = np.array(list_of_list, dtype=object)\n",
     "\n",
     "print(list_array)\n"
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "2b7af662",
    "metadata": {},
    "outputs": [
@@ -83,22 +84,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Flatten without updating 2nd elemnt\n",
-      "[list([10, 8, 6, 4, 2, 0]) list([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10])]\n",
-      "Flatten after updating 2nd elemnt\n",
-      "[list([10, 8, 6, 4, 2, 0]) 10]\n",
-      "ravel before updating 2nd elemnt\n",
-      "[list([10, 8, 6, 4, 2, 0]) list([0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10])]\n",
-      "ravel after updating 2nd elemnt\n",
-      "[list([10, 8, 6, 4, 2, 0]) 10]\n"
+      "Flatten without updating 2nd element\n",
+      "[list([10, 8, 6, 4, 2]) list([0, 2, 4, 6, 8, 10])]\n",
+      "Flatten Array after updating 2nd element\n",
+      "[list([10, 8, 6, 4, 2]) 10]\n",
+      "Ravel Array before updating 2nd element\n",
+      "[list([10, 8, 6, 4, 2]) list([0, 2, 4, 6, 8, 10])]\n",
+      "ravel after updating 2nd element\n",
+      "[list([10, 8, 6, 4, 2]) 10]\n"
      ]
     }
    ],
    "source": [
     "#Q-3\n",
     "\n",
-    "list_of_list = [list(range(10, -1, -2)), list(range(0,11))]\n",
-    "list_array = np.array(list_of_list, dtype=object)\n",
+    "list_of_list = [[x for x in range(10, -1, -2)], [x for x in range(0,11)]]\n",
+    "\n",
+    "list_array = np.array(list_of_lists, dtype=object)\n",
     "\n",
     "flatten_array=list_array.flatten()\n",
     "print(\"Flatten without updating 2nd element\")\n",
@@ -164,7 +166,7 @@
     "\n",
     "Integers = array.astype(int)\n",
     "print(\"\\nIntegers Array \\n\")\n",
-    "print(Integers)\n",
+    "print(Integers)f\n",
     "\n",
     "Floats = Integers.astype(float)\n",
     "\n",
@@ -607,6 +609,7 @@
     "array6 = np.hstack((array4,array5))\n",
     "print(\"\\nStack sorted  array6\\n\")\n",
     "\n",
+    "\n",
     "print(array6)\n",
     "\n",
     "\n",
@@ -715,9 +718,7 @@
     "    else:\n",
     "        return array[int(len(array)/2)]\n",
     "\n",
-    "def Calculate_Mode(array):\n",
-    "    \n",
-    "    \n",
+    "def Calculate_Mode(array):  \n",
     "    values, counts = np.unique(array, return_counts=True)\n",
     "    index = np.argmax(counts)\n",
     "    return values[index]\n",
