--- a/chapter7_w7.ipynb
+++ b/chapter7_w7.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "37be4bea",
    "metadata": {},
    "outputs": [
@@ -26,23 +26,23 @@
     {
      "data": {
       "text/plain": [
-       "array([ 2,  4,  5,  6, 11])"
+       "array([2, 4, 5, 6, 1])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "numbers = np.array([2,4,5,6,11])\n",
+    "numbers = np.array([2,4,5,6,1])\n",
     "print(type(numbers))\n",
     "numbers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "945648f5",
    "metadata": {
     "scrolled": true
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "f20d786a",
    "metadata": {},
    "outputs": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "id": "250bb5e3",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "array([0.  , 0.25, 0.5 , 0.75, 1.  ])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,13 +197,13 @@
     "ranged_arrays\n",
     "listed_arrays = np.array([x for x in range(10, 1, -2)])\n",
     "listed_arrays.reshape(5,1)\n",
-    "float_ranges = np.linspace(0.0,1.0,num=5)\n",
+    "float_ranges = np.linspace(0,1,num=5)\n",
     "float_ranges"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "d8f9bfb2",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.26 s ± 50.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.23 s ± 23.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "d3f9d99b",
    "metadata": {},
    "outputs": [
@@ -231,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50.7 ms ± 334 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+      "20.4 ms ± 515 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "ddfa0a84",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
      "output_type": "stream",
      "text": [
       "[False False False False False]\n",
-      "[ 6 11]\n"
+      "[6]\n"
      ]
     }
    ],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 26,
    "id": "8453b382",
    "metadata": {},
    "outputs": [
@@ -277,16 +277,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3 4 5]\n"
+      "[0 1 2 3 4 5]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([ 1,  4,  9, 16, 25])"
+       "array([ 0,  1,  4,  9, 16, 25])"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,24 +294,24 @@
    "source": [
     "#Create an array of the values from 1 through 5, \n",
     "#then use broadcasting to square each value.\n",
-    "values = np.arange(1,6)\n",
+    "values = np.arange(0,6)\n",
     "print (values)\n",
     "values ** 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "0a699c65",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([100,  96,  90])"
+       "array([ 96, 100,  94, 100])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "5440f4dc",
    "metadata": {},
    "outputs": [
@@ -337,20 +337,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 7 14  9  5 16 14 18 11 12 11 16 12 11  9 14]\n"
+      "[ 5  9  8 10 12 16 16 15  9 10 18 11 19 12 15]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[61, 71, 52, 91, 43, 56],\n",
-       "       [98, 83, 72, 81, 50, 51],\n",
-       "       [69, 40, 85, 76, 57, 53],\n",
-       "       [65, 41, 92, 52, 76, 65],\n",
-       "       [84, 79, 70, 73, 52, 99]])"
+       "array([[73, 85, 50, 64, 73, 46],\n",
+       "       [61, 95, 43, 60, 48, 86],\n",
+       "       [41, 61, 82, 65, 49, 66],\n",
+       "       [87, 66, 96, 80, 98, 46],\n",
+       "       [96, 40, 44, 98, 65, 71]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "84b8ce83",
    "metadata": {},
    "outputs": [
@@ -375,16 +375,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "85\n",
-      "[98 83 72 81 50 51]\n",
-      "[[98 83 72 81 50 51]\n",
-      " [69 40 85 76 57 53]\n",
-      " [65 41 92 52 76 65]]\n",
-      "[[52 43]\n",
-      " [72 50]\n",
-      " [85 57]\n",
-      " [92 76]\n",
-      " [70 52]]\n"
+      "82\n",
+      "[[61 95 43 60 48 86]\n",
+      " [41 61 82 65 49 66]\n",
+      " [87 66 96 80 98 46]\n",
+      " [96 40 44 98 65 71]]\n",
+      "[[50 73]\n",
+      " [43 48]\n",
+      " [82 49]\n",
+      " [96 98]\n",
+      " [44 65]]\n"
      ]
     }
    ],
@@ -392,9 +392,9 @@
     "#indexing \n",
     "print(grades[2,2])\n",
     "#slicers => rows\n",
-    "print(grades[1])\n",
+    "#print(grades[1])\n",
     "# sequential row picks\n",
-    "print(grades[1:4])\n",
+    "print(grades[1:5])\n",
     "# all rows for specific column\n",
     "#print(grades[:, 0]) #sequential column pick\n",
     "#print(grades[:, 2:4])\n",
@@ -404,17 +404,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "84b6b91d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[58 76 40 97 85 40]\n",
+      " [83 93 92 67 89 81]\n",
+      " [63 73 90 73 88 51]\n",
+      " [73 44 48 81 76 98]\n",
+      " [91 45 67 94 45 61]\n",
+      " [50 49 73 43 83 63]\n",
+      " [65 93 79 87 59 58]\n",
+      " [44 89 60 50 86 97]\n",
+      " [80 98 47 79 43 86]\n",
+      " [64 98 60 52 93 94]]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(6, 3)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,6 +439,7 @@
     "#generate exam marks for 10 students \n",
     "#for 6 courses and perform following tasks\n",
     "exam = np.random.randint(40, 100, 60).reshape(10,6)\n",
+    "print(exam)\n",
     "avg_student = exam.mean(axis = 1)\n",
     "avg_course = exam.mean(axis = 0)\n",
     "#find averge marks student wise and course wise.\n",
@@ -484,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "id": "e3b97b3c",
    "metadata": {},
    "outputs": [
@@ -502,7 +519,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,9 +564,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "id": "b1bba8f4",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -581,38 +600,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>98</td>\n",
-       "      <td>60</td>\n",
+       "      <td>82</td>\n",
+       "      <td>67</td>\n",
        "      <td>92</td>\n",
-       "      <td>89</td>\n",
+       "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>99</td>\n",
-       "      <td>82</td>\n",
-       "      <td>82</td>\n",
-       "      <td>66</td>\n",
+       "      <td>83</td>\n",
+       "      <td>98</td>\n",
+       "      <td>91</td>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>79</td>\n",
-       "      <td>85</td>\n",
-       "      <td>65</td>\n",
-       "      <td>73</td>\n",
+       "      <td>76</td>\n",
+       "      <td>70</td>\n",
+       "      <td>75</td>\n",
+       "      <td>98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>81</td>\n",
-       "      <td>83</td>\n",
-       "      <td>79</td>\n",
-       "      <td>62</td>\n",
+       "      <td>78</td>\n",
+       "      <td>85</td>\n",
+       "      <td>72</td>\n",
+       "      <td>64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>73</td>\n",
-       "      <td>66</td>\n",
-       "      <td>88</td>\n",
-       "      <td>99</td>\n",
+       "      <td>68</td>\n",
+       "      <td>70</td>\n",
+       "      <td>69</td>\n",
+       "      <td>79</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -620,14 +639,14 @@
       ],
       "text/plain": [
        "   Sams  David  Bob  Aalic\n",
-       "0    98     60   92     89\n",
-       "1    99     82   82     66\n",
-       "2    79     85   65     73\n",
-       "3    81     83   79     62\n",
-       "4    73     66   88     99"
+       "0    82     67   92     70\n",
+       "1    83     98   91     84\n",
+       "2    76     70   75     98\n",
+       "3    78     85   72     64\n",
+       "4    68     70   69     79"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,28 +775,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 51,
    "id": "7684245f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98    1\n",
-       "99    1\n",
-       "79    1\n",
-       "81    1\n",
-       "73    1\n",
-       "Name: Sams, dtype: int64"
+       "90    1\n",
+       "91    1\n",
+       "85    1\n",
+       "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grades.Sams.value_counts()"
+    "grades.value_counts()"
    ]
   },
   {
