--- a/week09+10.ipynb
+++ b/week09+10.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "b72fc789",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "86587287",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "83f74a82",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "f67fa2f6",
    "metadata": {},
    "outputs": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "1ca48b83",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "71939749",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
       "--------------  ----- \n",
       "3 non-null      string\n",
       "dtypes: string(1)\n",
-      "memory usage: 152.0 bytes\n"
+      "memory usage: 156.0 bytes\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "ec352810",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "77c74d88",
    "metadata": {},
    "outputs": [
@@ -226,29 +226,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "61c0bd8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'17.90'"
+       "'17.895'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"{:.2f}\".format(17.89545) #representation types\n",
+    "\"{:.3f}\".format(17.89545) #representation types\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "42036f72",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "'1,276,547'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,28 +269,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "0a11ca8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello World Hello 234!'"
+       "'Hello World Hello 234'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"{0} {1} {0} {2}!\".format(\"Hello\", \"World\", 234)\n"
+    "\"{0} {1} {0} {2}\".format(\"Hello\", \"World\", 234)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "13baac2a",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "'\\t \\n This is a test string.'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "91ad4764",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
        "'This is a test string. \\t\\t \\n'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "32d87a62",
    "metadata": {},
    "outputs": [
@@ -347,7 +347,7 @@
        "'This is the data science'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "8529cf6b",
    "metadata": {},
    "outputs": [
@@ -368,20 +368,21 @@
        "4"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"The courses in the \n",
+    "x=\"\"\"The courses in the \n",
     "catalog are: Data Science, Data Structure,\n",
-    "Database, data Analytics\"\"\".lower().count('data')"
+    "Database, data Analytics\"\"\".lower()\n",
+    "x.count('data')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "id": "87a56c87",
    "metadata": {},
    "outputs": [
@@ -389,12 +390,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a', ' b', ' he he he']\n"
+      "['a', ' b', ' he', ' he he']\n"
      ]
     }
    ],
    "source": [
-    "val = \"a, b, he he he\"\n",
+    "val = \"a, b, he, he he\"\n",
     "values = val.split(',')\n",
     "print(values)\n",
     "\n",
@@ -404,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "b7c25e4b",
    "metadata": {},
    "outputs": [
@@ -424,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "04c4a342",
    "metadata": {},
    "outputs": [
@@ -445,17 +446,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "d7ffd58e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'a--->b--->he he he'"
+       "'a--->b--->he--->he he'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "7b650003",
    "metadata": {},
    "outputs": [
@@ -479,19 +480,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World!\n"
+      "Hello,World!\n"
      ]
     }
    ],
    "source": [
-    "text = \" , , , Hello, World! , , , \"\n",
+    "text = \" ,  , , Hello,World! , , , \"\n",
     "stripped_text = text.strip(\", \")\n",
     "print(stripped_text)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "id": "59b6966f",
    "metadata": {},
    "outputs": [
@@ -501,7 +502,7 @@
        "'C:\\\\Windows\\\\users\\\\UsmanJoyia\\\\ds'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "id": "96d2ce21",
    "metadata": {},
    "outputs": [
@@ -562,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "id": "4e97e2ad",
    "metadata": {},
    "outputs": [
@@ -579,7 +580,7 @@
        "'Match'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,23 +595,55 @@
     "print (res)\n",
     "#? zero or one occurrence, {n,} for atleast occurrences\n",
     "#{n,m} inclusive m for n to m length\n",
-    "'Match' if re.fullmatch('labell?ed', 'labellled') else 'No match'\n",
+    "'Match' if re.fullmatch('labell?ed', 'labelled') else 'No match'\n",
     "'Match' if re.fullmatch(r'\\d{3,7}', '123456') else 'No match'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 55,
+   "id": "330f3c5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid phone number\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def is_valid_phone_number(phone_number):\n",
+    "    # Define a regular expression pattern for valid phone numbers\n",
+    "    phone_pattern = r'^\\d{11}$'  # Assumes a 11-digit phone number \n",
+    "    #phone=r'^\\d{11}$'\n",
+    "    # Use re.match to check if the phone_number matches the pattern\n",
+    "    return re.match(phone_pattern, phone_number) is not None\n",
+    "\n",
+    "# Example usage\n",
+    "phone_number = '12345678905'  # Replace with the phone number to verify\n",
+    "if is_valid_phone_number(phone_number):\n",
+    "    print(\"Valid phone number\")\n",
+    "else:\n",
+    "    print(\"Invalid phone number\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "c88dd01d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Valid'"
+       "'Invalid'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +660,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
+   "id": "7e31ed7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid email address\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def is_valid_email(email):\n",
+    "    # Define a regular expression pattern for valid email addresses\n",
+    "    email_pattern = r'^[\\w\\.-]+@[\\w\\.-]+$'\n",
+    "\n",
+    "    # Use re.match to check if the email matches the pattern\n",
+    "    return re.match(email_pattern, email) is not None\n",
+    "\n",
+    "# Example usage\n",
+    "email_address = 'example@email.com'  # Replace with the email address to verify\n",
+    "if is_valid_email(email_address):\n",
+    "    print(\"Valid email address\")\n",
+    "else:\n",
+    "    print(\"Invalid email address\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "b521fc4c",
    "metadata": {},
    "outputs": [
@@ -637,7 +702,7 @@
        "['foo', 'boo', 'alice', 'bob', 'qux']"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "id": "ff5a40ae",
    "metadata": {},
    "outputs": [
@@ -672,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "605714c6",
    "metadata": {},
    "outputs": [
@@ -685,17 +750,27 @@
     }
    ],
    "source": [
-    "\n",
     "regex = re.compile(r\"\\s+\")\n",
     "print(regex)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "ed5a3de0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(3, 4), match=' '>\n",
+      "<re.Match object; span=(7, 8), match=' '>\n",
+      "<re.Match object; span=(13, 15), match='\\t '>\n",
+      "<re.Match object; span=(18, 20), match=' \\t'>\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "regex.split(text)\n",
@@ -707,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 30,
    "id": "d4c56a8b",
    "metadata": {},
    "outputs": [
@@ -719,7 +794,7 @@
        " ('starcie_X0', 'bne.edu', 'cn')]"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "id": "51f731c0",
    "metadata": {},
    "outputs": [],
@@ -753,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 32,
    "id": "84dfa274",
    "metadata": {},
    "outputs": [
@@ -765,7 +840,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 33,
    "id": "8205edb7",
    "metadata": {},
    "outputs": [
@@ -830,7 +905,7 @@
        "1  White Brown  demo2@nu.edu.pk  03121234567"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 34,
    "id": "24b3b28a",
    "metadata": {},
    "outputs": [
@@ -873,7 +948,6 @@
        "      <th>Name</th>\n",
        "      <th>Email</th>\n",
        "      <th>Phone</th>\n",
-       "      <th>Phone_</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -882,13 +956,11 @@
        "      <td>Blue Green</td>\n",
        "      <td>demo1@nu.edu.pk</td>\n",
        "      <td>0333-3123456</td>\n",
-       "      <td>0333-3123456</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>White Brown</td>\n",
        "      <td>demo2@nu.edu.pk</td>\n",
-       "      <td>0312-1234567</td>\n",
        "      <td>0312-1234567</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -896,12 +968,12 @@
        "</div>"
       ],
       "text/plain": [
-       "          Name            Email         Phone        Phone_\n",
-       "0   Blue Green  demo1@nu.edu.pk  0333-3123456  0333-3123456\n",
-       "1  White Brown  demo2@nu.edu.pk  0312-1234567  0312-1234567"
+       "          Name            Email         Phone\n",
+       "0   Blue Green  demo1@nu.edu.pk  0333-3123456\n",
+       "1  White Brown  demo2@nu.edu.pk  0312-1234567"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
