--- a/F200317_BCS7C_Q2.ipynb
+++ b/F200317_BCS7C_Q2.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "2cd829c2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 4, 6, 8, 10, 12, 14]\n",
-      "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100, 121, 144, 169, 196]\n",
-      "[None, 4, None, 16, None, 36, None, 64, None, 100, None, 144, None, 196]\n"
+     "ename": "SyntaxError",
+     "evalue": "expected 'else' after 'if' expression (60860938.py, line 15)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[3], line 15\u001b[1;36m\u001b[0m\n\u001b[1;33m    squareeven = list(map(lambda x: x**2 if x % 2 == 0 val))\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected 'else' after 'if' expression\n"
      ]
     }
    ],
@@ -32,7 +31,7 @@
     "\n",
     "\n",
     "#PART C\n",
-    "squareeven = list(map(lambda x: x**2 if x % 2 == 0 else None, val))\n",
+    "squareeven = list(map(lambda x: x**2 if x % 2 == 0 val))\n",
     "print(squareeven)\n",
     "\n"
    ]
@@ -62,7 +61,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
