--- a/Quiz 4.ipynb
+++ b/Quiz 4.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d240be7b",
    "metadata": {},
    "outputs": [
@@ -30,17 +30,17 @@
      "output_type": "stream",
      "text": [
       "    StudentID Class  Gender Subject  Score      CGPA\n",
-      "0           1     C  Female      EE     41  2.226859\n",
-      "1           2     C    Male      CS     66  1.519883\n",
-      "2           3     C  Female      EE     81  1.469311\n",
-      "3           4     A    Male      CS     41  1.750729\n",
-      "4           5     C  Female      EE     65  2.647680\n",
+      "0           1     C  Female      EE     76  2.284552\n",
+      "1           2     A  Female      SE     71  3.899964\n",
+      "2           3     C  Female      CS     98  3.890860\n",
+      "3           4     C    Male      EE     94  3.559028\n",
+      "4           5     A    Male      EE     48  1.883347\n",
       "..        ...   ...     ...     ...    ...       ...\n",
-      "95         96     B  Female      CS     65  3.850186\n",
-      "96         97     C  Female      CS     92  3.851821\n",
-      "97         98     C  Female      SE     62  2.720314\n",
-      "98         99     B  Female      CS     48  2.895512\n",
-      "99        100     A    Male      SE     51  2.345337\n",
+      "95         96     A  Female      EE     99  2.420415\n",
+      "96         97     A    Male      CS     80  1.519606\n",
+      "97         98     C  Female      EE     76  2.301555\n",
+      "98         99     A  Female      CS     63  2.195514\n",
+      "99        100     A    Male      EE     68  2.847550\n",
       "\n",
       "[100 rows x 6 columns]\n"
      ]
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "401fcbcb",
    "metadata": {},
    "outputs": [
@@ -99,17 +99,17 @@
      "output_type": "stream",
      "text": [
       "Average score for each class:\n",
-      "            CGPA\n",
-      "Class          \n",
-      "A      2.582078\n",
-      "B      2.722355\n",
-      "C      2.269768\n"
+      "            Score\n",
+      "Class           \n",
+      "A      71.969697\n",
+      "B      73.861111\n",
+      "C      68.548387\n"
      ]
     }
    ],
    "source": [
     "#Add Solution here\n",
-    "class_avg_score = df.pivot_table(values='CGPA', index='Class', aggfunc='mean')\n",
+    "class_avg_score = df.pivot_table(values='Score', index='Class', aggfunc='mean')\n",
     "print(\"Average score for each class:\\n\", class_avg_score)\n"
    ]
   },
@@ -178,8 +178,6 @@
    ],
    "source": [
     "#Add Solution here\n",
-    "\n",
-    "\n",
     "subject_gender_avg_score = df.pivot_table(values='Score', index='Subject', columns='Gender', aggfunc='mean')\n",
     "print(\"Average score for each subject by gender:\\n\", subject_gender_avg_score)\n"
    ]
